# yellow-snake

./: .env.example  .gitignore  Dockerfile  main.py  note.txt  pyproject.toml
proto/: image.proto
src/controllers/: image.py
src/helpers/: file.py  jwt.py
src/interceptor/: authentication.py  logging.py
src/lib/: imagekit.py
